Mac OS/X .appcan be generated, correctly finds data in ../Resources

--- a/liquidwar6/data/icon/Makefile.am
+++ b/liquidwar6/data/icon/Makefile.am
@@ -20,5 +20,5 @@
 
 pkgdata_DATA = liquidwar6.png liquidwar6.xpm
 pkgdatadir = $(datadir)/pixmaps
-EXTRA_DIST = $(pkgdata_DATA) liquidwar6.ico
+EXTRA_DIST = $(pkgdata_DATA) liquidwar6.ico liquidwar6.icns
 
