--- a/liquidwar6/data/icon/Makefile.in
+++ b/liquidwar6/data/icon/Makefile.in
@@ -287,7 +287,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 pkgdata_DATA = liquidwar6.png liquidwar6.xpm
-EXTRA_DIST = $(pkgdata_DATA) liquidwar6.ico
+EXTRA_DIST = $(pkgdata_DATA) liquidwar6.ico liquidwar6.icns
 all: all-am
 
 .SUFFIXES:
