--- a/liquidwar6/pkg/Info.plist.in
+++ b/liquidwar6/pkg/Info.plist.in
@@ -3,22 +3,30 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleExecutable</key>
-	<string>Liquid War 6</string>
+	<string>liquidwar6</string>
 	<key>CFBundleIconFile</key>
-	<string>Liquid War 6.icns</string>
+	<string>liquidwar6.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.ufoot.liquidwar6</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Liquid War 6</string>
+	<string>@PACKAGE_NAME@</string>
+	<key>CFBundleDisplayName</key>
+	<string>@PACKAGE_STRING@</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>@VERSION@</string>
+	<string>@PACKAGE_VERSION@</string>
 	<key>CFBundleSignature</key>
 	<string>RRdb</string>
 	<key>CFBundleVersion</key>
 	<string>4</string>
+	<key>NSAppleScriptEnabled</key>
+	<string>false</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright (C)  2010  Christian Mauduit  &lt;ufoot@ufoot.org&gt;</string>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
 </dict>
 </plist>
