--- a/liquidwar6/map/january/Makefile.am
+++ b/liquidwar6/map/january/Makefile.am
@@ -18,7 +18,7 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-pkgdata_DATA = README map.png texture.jpeg rules.xml hints.xml style.xml
-pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/map/atlantis
+pkgdata_DATA = README boost.png danger.png hints.xml map.png medicine.png one-way-east.png one-way-north.png one-way-south.png one-way-west.png rules.xml style.xml texture.jpeg
+pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/map/january
 EXTRA_DIST = $(pkgdata_DATA)
 
