--- a/liquidwar6/pkg/liquidwar6.spec.in
+++ b/liquidwar6/pkg/liquidwar6.spec.in
@@ -1,6 +1,6 @@
 %define name @PACKAGE_TARNAME@
 %define version @PACKAGE_VERSION@
-%define release 1ufoot
+%define release 1vendor
 
 #Put this in /etc/rpm/macros.ufoot
 #%_signature gpg
