--- a/liquidwar6/pkg/Info.plist.in
+++ b/liquidwar6/pkg/Info.plist.in
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!--
+Liquid War 6 is a unique multiplayer wargame.
+Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010  Christian Mauduit <ufoot@ufoot.org>
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
+Contact author        : ufoot@ufoot.org
+-->
 <plist version="1.0">
 <dict>
 	<key>CFBundleExecutable</key>
@@ -25,7 +45,7 @@
 	<key>NSAppleScriptEnabled</key>
 	<string>false</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright (C)  2010  Christian Mauduit  &lt;ufoot@ufoot.org&gt;</string>
+	<string>Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010  Christian Mauduit  &lt;ufoot@ufoot.org&gt;</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
