--- a/liquidwar6/data/p2p/Makefile.am
+++ b/liquidwar6/data/p2p/Makefile.am
@@ -18,26 +18,9 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-AM_CFLAGS = @LW6_CFLAGS@
-AM_LDFLAGS = @LW6_LDFLAGS@ -lsqlite3
+SUBDIRS = sql
 
-if ALLINONE
-LW6DYN_LIB = 
-else
-LW6DYN_LIB = ../dyn/libdyn.la 
-endif
-
-noinst_LTLIBRARIES = libp2p.la
-libp2p_la_SOURCES = p2p-data.c p2p-db.c p2p-node.c p2p-test.c
-libp2pdir= $(includedir)/@PACKAGE_TARNAME@/p2p
-libp2p_HEADERS = p2p.h
-
-if !FULLSTATIC
-libexec_PROGRAMS = liquidwar6p2p-test
-liquidwar6p2p_test_SOURCES = p2p-testmain.c
-liquidwar6p2p_test_LDADD = libp2p.la ../cli/libcli.la ../srv/libsrv.la ../net/libnet.la $(LW6DYN_LIB) ../cfg/libcfg.la ../hlp/libhlp.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
-TESTS = liquidwar6p2p-test
-endif
-
-EXTRA_DIST = p2p-internal.h
+pkgdata_DATA = README p2p-const.xml
+pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/data/p2p
+EXTRA_DIST = $(pkgdata_DATA)
 
