SQL queries are now stored in a hash rather than a C struct.

--- a/liquidwar6/data/p2p/sql/Makefile.am
+++ b/liquidwar6/data/p2p/sql/Makefile.am
@@ -18,7 +18,7 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-pkgdata_DATA = create-database.sql
+pkgdata_DATA = create-database.sql delete-server.sql insert-server.sql
 pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/data/p2p/sql
 EXTRA_DIST = $(pkgdata_DATA)
 
